--- a/src/Deepin.ServiceDefaults/Deepin.ServiceDefaults.csproj
+++ b/src/Deepin.ServiceDefaults/Deepin.ServiceDefaults.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackageId>Deepin.ServiceDefaults</PackageId>
-		<Version>0.0.3</Version>
+		<Version>0.0.4</Version>
 		<Authors>Leo Yang</Authors>
 		<Company>Deepin</Company>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -22,7 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Deepin.Infrastructure\Deepin.Infrastructure.csproj" />
+	  <ProjectReference Include="..\Deepin.Application\Deepin.Application.csproj" />
 	</ItemGroup>
 
 </Project>
