--- a/src/Deepin.Infrastructure/Deepin.Infrastructure.csproj
+++ b/src/Deepin.Infrastructure/Deepin.Infrastructure.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+		<PackageReference Include="StackExchange.Redis" Version="2.8.24" />
 	</ItemGroup>
 
 	<ItemGroup>
